--- a/BS.Output.Ftp/BS.Output.Ftp.csproj
+++ b/BS.Output.Ftp/BS.Output.Ftp.csproj
@@ -31,9 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BS.Output">
-      <HintPath>O:\Bin\BS.Output.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="BS.Output, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\BugShootingOutputApi.3.0.0\lib\BS.Output.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -81,6 +80,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Resources\logo_64.png" />
   </ItemGroup>
   <ItemGroup>
